--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
 
     <div class="main">
         <nav>
-            <span><img width="53" src="assets/images/logo.svg" alt=""></span>
+            <span><img width="130" src="assets\logo.svg" alt="Netflix Logo"></span>
             <div>
                 <button class="btn">English</button>
                 <button class="btn btn-red-sm">Sign In</button>
             </div>
         </nav>
-        <div class="box">
-        </div>
+
+        <div class="box"></div>
+
         <div class="hero">
-            <span>Enjoy big movies, hit series and more from ₹ 149.</span>
-            <span>Join today. Cancel anytime.</span>
+            <span>Unlimited movies, TV shows and more</span>
+            <span>Starts at ₹149. Cancel at any time.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="hero-buttons">
-                <input type="text" placeholder="Email Address">
+                <input type="text" placeholder="Email address">
                 <button class="btn btn-red">Get Started &gt;</button>
             </div>
         </div>
 
         <div class="separation"></div>
-
     </div>
+
 
     <section class="first">
         <div>
