--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h2>Frequently Asked Questions</h2>
         <div class="faqbox">
             <div class="faq-header">
-            <div class = "question">What is NetFlix</div>
+            <div class = "question">What is Netflix</div>
             <svg class = "icon" width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
                 <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                 <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
