--- a/register.html
+++ b/register.html
@@ -3,153 +3,176 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Register</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <title>Netflix Register</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+      font-family: 'Roboto', sans-serif;
     }
 
     body {
-      font-family: 'Inter', sans-serif;
-      background-color: #141414;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      background: url("https://media.istockphoto.com/id/1303344250/photo/television-streaming-multimedia-wall-concept.webp?a=1&b=1&s=612x612&w=0&k=20&c=jVigzpY2A6g5sfUbwQzF8rSzX2WQtyCSAE25O3teyAs=") no-repeat center center fixed;
+      background-size: cover;
+      position: relative;
       min-height: 100vh;
-      padding: 20px;
     }
 
-    .box {
-      background-color: #1f1f1f;
-      padding: 40px 30px;
-      border-radius: 8px;
-      width: 100%;
+    body::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.8);
+      z-index: 0;
+    }
+
+    .container {
+      position: relative;
+      z-index: 1;
       max-width: 420px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.4);
+      margin: 80px auto;
+      background-color: rgba(20, 20, 20, 0.95);
+      padding: 40px 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 40px 5px #e50914aa;
+      color: white;
     }
 
-    h1 {
-      font-size: 28px;
-      margin-bottom: 24px;
+    .container h2 {
       text-align: center;
+      color: #fff;
+      margin-bottom: 30px;
+      font-size: 26px;
+      letter-spacing: 1px;
+    }
+
+    .input-group {
+      margin-bottom: 20px;
     }
 
     label {
       display: block;
-      margin-top: 16px;
+      margin-bottom: 8px;
+      color: #ccc;
       font-size: 14px;
     }
 
-    input[type="text"],
-    input[type="email"],
-    input[type="password"] {
+    input {
       width: 100%;
-      padding: 10px;
-      background: #333;
+      padding: 12px;
       border: none;
-      color: #fff;
-      font-size: 14px;
-      border-radius: 4px;
-      margin-top: 6px;
+      border-radius: 5px;
+      font-size: 15px;
+      background-color: #222;
+      color: white;
+      transition: 0.3s;
+      outline: none;
     }
 
     input:focus {
-      outline: 2px solid #e50914;
+      box-shadow: 0 0 8px 2px #e50914;
+      background-color: #2c2c2c;
     }
 
-    .strength {
-      height: 6px;
-      border-radius: 4px;
-      background-color: #444;
-      margin-top: 6px;
-      margin-bottom: 8px;
-      transition: width 0.3s ease;
-    }
-
-    .error {
-      font-size: 13px;
-      color: #ff4c4c;
-      height: 14px;
-      margin-top: 4px;
-    }
-
-    button {
-      width: 100%;
-      padding: 12px;
-      background-color: #e50914;
-      border: none;
-      color: #fff;
-      font-size: 16px;
-      border-radius: 4px;
-      margin-top: 24px;
+    .toggle-password {
+      position: absolute;
+      right: 20px;
+      margin-top: -36px;
+      font-size: 18px;
+      color: #ccc;
       cursor: pointer;
     }
 
-    button:hover {
-      background-color: #f40612;
+    #strengthBar {
+      margin-top: 8px;
+      height: 6px;
+      background: #444;
+      border-radius: 4px;
+      overflow: hidden;
     }
 
-    .msg {
-      margin-top: 18px;
-      font-size: 14px;
-      text-align: center;
-      color: #00e676;
+    #pwStrength {
+      height: 100%;
+      width: 0%;
+      background: limegreen;
+      transition: 0.4s ease;
     }
 
-    .link {
+    .submit-btn {
+      width: 100%;
+      padding: 14px;
+      font-size: 16px;
+      background-color: #e50914;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .submit-btn:hover {
+      background-color: #f6121d;
+    }
+
+    .bottom-text {
       text-align: center;
       margin-top: 20px;
       font-size: 14px;
     }
 
-    a {
+    .bottom-text a {
       color: #e50914;
       text-decoration: none;
     }
 
-    @media (max-width: 480px) {
-      .box {
-        padding: 30px 20px;
-      }
-
-      h1 {
-        font-size: 24px;
-      }
+    .help-text {
+      color: #ff4c4c;
+      font-size: 13px;
+      margin-top: 4px;
     }
   </style>
 </head>
 <body>
-  <div class="box">
-    <h1>Sign Up</h1>
-    <form id="registerForm" novalidate>
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" required />
-      <small id="usernameHelp" class="error"></small>
+  <div class="container">
+    <h2>Create Your Account</h2>
+    <form id="registerForm">
+      <div class="input-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" required />
+        <div class="help-text" id="usernameHelp"></div>
+      </div>
 
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required />
-      <small id="emailHelp" class="error"></small>
+      <div class="input-group">
+        <label for="email">Email address</label>
+        <input type="email" id="email" name="email" required />
+        <div class="help-text" id="emailHelp"></div>
+      </div>
 
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" required />
-      <div class="strength" id="strengthBar"></div>
-      <small id="passwordHelp" class="error"></small>
+      <div class="input-group" style="position: relative;">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required />
+        <span class="toggle-password" id="pwToggle">👁️</span>
+        <div id="strengthBar"><div id="pwStrength"></div></div>
+        <div class="help-text" id="passwordHelp"></div>
+      </div>
 
-      <label for="confirmPassword">Confirm Password</label>
-      <input type="password" id="confirmPassword" name="confirmPassword" required />
-      <small id="confirmHelp" class="error"></small>
+      <div class="input-group">
+        <label for="confirmPassword">Confirm Password</label>
+        <input type="password" id="confirmPassword" name="confirmPassword" required />
+        <div class="help-text" id="confirmHelp"></div>
+      </div>
 
-      <label><input type="checkbox" id="togglePassword" /> Show Passwords</label>
-
-      <button type="submit">Register</button>
-      <p class="link">Already have an account? <a href="#">Sign In</a></p>
+      <button type="submit" class="submit-btn" id="submitBtn">Register</button>
     </form>
-    <div id="formFeedback" class="msg"></div>
+
+    <div class="bottom-text">
+      Already have an account? <a href="#">Sign In</a>
+    </div>
   </div>
-  <script src="register.js" defer></script>
+
+  <script src="register.js"></script>
 </body>
 </html>
