Made Navbar Sticky and responsive

--- a/index.html
+++ b/index.html
@@ -10,14 +10,31 @@
 
 <body>
 
-    <div class="main">
+   <!-- <div class="main">
         <nav>
             <span><img width="130" src="assets\logo.svg" alt="Netflix Logo"></span>
             <div>
                 <button class="btn">English</button>
                 <button class="btn btn-red-sm">Sign In</button>
             </div>
-        </nav>
+        </nav> -->
+
+    <nav class="navbar">
+      <div class="logo">
+        <img width="130" src="assets/logo.svg" alt="Netflix Logo">
+      </div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">TV Shows</a></li>
+        <li><a href="#">Movies</a></li>
+        <li><a href="#">New & Popular</a></li>
+        <li><a href="#">My List</a></li>
+      </ul>
+      <div class="nav-buttons">
+        <button class="btn">English</button>
+        <button class="btn btn-red-sm">Sign In</button>
+      </div>
+    </nav>
 
         <div class="box"></div>
 
