LINK SIGNUP-PAGE TO MAIN-PAGE

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <span><img width="130" src="assets\logo.svg" alt="Netflix Logo"></span>
             <div>
                 <button class="btn">English</button>
-                <button class="btn btn-red-sm">Sign In</button>
+                <button class="btn btn-red-sm" onclick="window.location.href='register.html'">Sign In</button>
+
             </div>
         </nav>
 
