--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-   <!-- <div class="main">
+    <!-- <div class="main">
         <nav>
             <span><img width="130" src="assets\logo.svg" alt="Netflix Logo"></span>
             <div>
@@ -21,35 +21,35 @@
         </nav> -->
 
     <nav class="navbar">
-      <div class="logo">
-        <img width="130" src="assets/logo.svg" alt="Netflix Logo">
-      </div>
-      <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">TV Shows</a></li>
-        <li><a href="#">Movies</a></li>
-        <li><a href="#">New & Popular</a></li>
-        <li><a href="#">My List</a></li>
-      </ul>
-      <div class="nav-buttons">
-        <button class="btn">English</button>
-        <button class="btn btn-red-sm">Sign In</button>
-      </div>
+        <div class="logo">
+            <img width="130" src="assets/logo.svg" alt="Netflix Logo">
+        </div>
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">TV Shows</a></li>
+            <li><a href="#">Movies</a></li>
+            <li><a href="#">New & Popular</a></li>
+            <li><a href="#">My List</a></li>
+        </ul>
+        <div class="nav-buttons">
+            <button class="btn">English</button>
+            <button class="btn btn-red-sm">Sign In</button>
+        </div>
     </nav>
 
-        <div class="box"></div>
+    <div class="box"></div>
 
-        <div class="hero">
-            <span>Unlimited movies, TV shows and more</span>
-            <span>Starts at ₹149. Cancel at any time.</span>
-            <span>Ready to watch? Enter your email to create or restart your membership.</span>
-            <div class="hero-buttons">
-                <input type="text" placeholder="Email address">
-                <button class="btn btn-red">Get Started &gt;</button>
-            </div>
+    <div class="hero">
+        <span>Unlimited movies, TV shows and more</span>
+        <span>Starts at ₹149. Cancel at any time.</span>
+        <span>Ready to watch? Enter your email to create or restart your membership.</span>
+        <div class="hero-buttons">
+            <input type="text" placeholder="Email address">
+            <button class="btn btn-red">Get Started &gt;</button>
         </div>
+    </div>
 
-        <div class="separation"></div>
+    <div class="separation"></div>
     </div>
 
 
@@ -115,43 +115,59 @@
         <h2>Frequently Asked Questions</h2>
         <div class="faqbox">
             <div class="faq-header">
-            <div class = "question">What is Netflix</div>
-            <svg class = "icon" width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
+                <div class="question">What is Netflix</div>
+                <svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="white"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg>
             </div>
-            <div class="answer">Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more.</div>
+            <div class="answer">Netflix is a streaming service that offers a wide variety of award-winning TV shows,
+                movies, anime, documentaries, and more.</div>
         </div>
         <div class="faqbox">
             <div class="faq-header">
-            <div class = "question">How much does Netflix cost?</div>
-            <svg class = "icon" width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
+                <div class="question">How much does Netflix cost?</div>
+                <svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="white"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg>
             </div>
-            <div class="answer">Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹149 to ₹649 a month.</div>
+            <div class="answer">Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for
+                one fixed monthly fee. Plans range from ₹149 to ₹649 a month.</div>
         </div>
         <div class="faqbox">
             <div class="faq-header">
-            <div class = "question">What can I watch on Netflix?</div>
-            <svg class = "icon" width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
+                <div class="question">What can I watch on Netflix?</div>
+                <svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="white"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg>
             </div>
-            <div class="answer">Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</div>
+            <div class="answer">Netflix has an extensive library of feature films, documentaries, TV shows, anime,
+                award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</div>
         </div>
         <div class="faqbox">
             <div class="faq-header">
-            <div class = "question">Where can I watch?</div>
-            <svg class = "icon" width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
+                <div class="question">Where can I watch?</div>
+                <svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="white"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg>
             </div>
-            <div class="answer">Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device.</div>
+            <div class="answer">Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web
+                at netflix.com from your personal computer or on any internet-connected device.</div>
         </div>
     </section>
     <div class="separation"></div>
@@ -161,14 +177,14 @@
             Questions? Call 000-800-919-1694
         </div>
         <div class="footer">
-            <div class="footer-item"> 
+            <div class="footer-item">
                 <a href="faq">Investor Relations</a>
                 <a href="faq">Jobs</a>
                 <a href="faq">Ways to Watch</a>
                 <a href="faq">Terms of Use</a>
             </div>
 
-            <div class="footer-item"> 
+            <div class="footer-item">
                 <a href="faq">Help Centre</a>
                 <a href="faq">Account</a>
                 <a href="faq">Speed Test</a>
@@ -177,18 +193,19 @@
             <div class="footer-item">
                 <a href="faq">Media Centre</a>
                 <a href="faq">Privacy</a>
-                <a href="faq">Cookie Preferences</a> 
+                <a href="faq">Cookie Preferences</a>
                 <a href="faq">Corporate</a>
             </div>
 
             <div class="footer-item">
                 <a href="faq">Contact Us</a>
-                <a href="faq">Speed Test</a> 
-                <a href="faq">Legal Notices</a> 
+                <a href="faq">Speed Test</a>
+                <a href="faq">Legal Notices</a>
                 <a href="faq">Only on Netflix</a>
             </div>
         </div>
     </footer>
-    <script src = "script.js"></script>
-    </body>
+    <script src="script.js"></script>
+</body>
+
 </html>
