Added Back to Top button with Netflix-style theme

--- a/index.html
+++ b/index.html
@@ -155,6 +155,16 @@
         </div>
     </section>
     <div class="separation"></div>
+<!-- Back to Top Button -->
+    <div id="backToTopBtn" onclick="scrollToTop()" title="Back to top" aria-label="Back to top">
+    <svg class="up-arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <circle cx="12" cy="12" r="11" stroke="#111" stroke-width="2" fill="white"/>
+        <path d="M8 14l4-4 4 4" fill="none" stroke="#111" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+    
+    </div>
+
+
 
     <footer>
         <div class="questions">
