--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 
 <body>
 
-   <!-- <div class="main">
-        <nav>
+ <div class="main">
+        <!-- <nav>
             <span><img width="130" src="assets\logo.svg" alt="Netflix Logo"></span>
             <div>
                 <button class="btn">English</button>
-                <button class="btn btn-red-sm" onclick="window.location.href='register.html'">Sign In</button>
+                <button class="btn btn-red-sm" onclick="window.location.href='register.html'">Sign In</button> 
 
             </div>
-        </nav> -->
+        </nav>  -->
 
     <nav class="navbar">
       <div class="logo">
@@ -95,9 +95,9 @@
                 <button type="submit" class="btn btn-red">Get Started &gt;</button>
             </form>
         </div>
-
+       </div>
         <div class="separation"></div>
-    </div>
+    
 
 
     <section class="first">
