Added signin page with HTML form and JS validation

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- Language Selector Button -->
         <button class="btn">English</button>
         <!-- Sign In Button - Links to registration page -->
-        <a href="register.html" class="btn btn-red-sm">Sign In</a>
+        <a href="signin.html" class="btn btn-red-sm">Sign In</a>
       </div>
     </nav>
 
