Linked register and sign-in pages to resolve conflict

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
           <div class="nav-buttons">
               <button class="btn">🌐 English</button>
-              <a href="#signin" class="btn btn-red-sm">Sign In</a>
+              <a href="signin.html" class="btn btn-red-sm">Sign In</a>
           </div>
       </nav>
 
