added profile selection and dashboard flow

--- a/signin.html
+++ b/signin.html
@@ -158,7 +158,7 @@
           <div class="help-text" id="passwordHelp"></div>
         </div>
 
-        <button type="submit" class="submit-btn" id="submitBtn">
+        <button type="submit" class="submit-btn" id="submitBtn" ahref="profile-selection.html">
           Sign In
         </button>
       </form>
