error 404 not found is solved

--- a/Legal Notices/legal.html
+++ b/Legal Notices/legal.html
@@ -10,9 +10,9 @@
   <div class="header">
     <div class="logo"><a href="/Netflix-Clone/index.html">Netflix</a></div>
     <div class="buttons">
-      <a href="/Netflix-Clone/signin.html" class="btn">Sign In</a>
-      <a href="/Netflix-Clone/Privacy/privacy.html" class="btn">Privacy</a>
-      <a href="/Netflix-Clone/Terms of use/terms.html" class="btn active">Terms Of Use</a>
+      <a href="/signin.html" class="btn">Sign In</a>
+      <a href="/Privacy/privacy.html" class="btn">Privacy</a>
+      <a href="/Terms of use/terms.html" class="btn active">Terms Of Use</a>
       <button onclick="window.print()" class="print-btn">Print</button>
       <button class="btn toggle-dark" id="themeToggle"></button>
     </div>
@@ -41,9 +41,9 @@
     <div>
     &copy; <span id="year"></span> Netflix, Inc. All rights reserved.
     </div>
-     <a href="terms.html">Terms of Use</a> |
-      <a href="/Netflix-Clone/Privacy/privacy.html">Privacy Policy</a> |
-      <a href="/Netflix-Clone/Legal Notices/legal.html">Legal Notices</a>
+     <a href="/Terms of use/terms.html">Terms of Use</a> |
+      <a href="/Privacy/privacy.html">Privacy Policy</a> |
+      <a href="/Legal Notices/legal.html">Legal Notices</a>
   </footer>
 
   <button class="scroll-to-top" id="scrollTopBtn">&#8679;</button>
