--- a/Privacy/privacy.html
+++ b/Privacy/privacy.html
@@ -10,7 +10,7 @@
   <div class="header">
     <div class="logo">Netflix</div>
     <div class="buttons">
-     <a href="/Netflix-Clone/signin.html" class="btn">Sign In</a>
+     <a href="/signin.html" class="btn">Sign In</a>
       <button class="btn toggle-dark">🌙</button>
     </div>
   </div>
@@ -120,9 +120,9 @@
     <div>
     &copy; <span id="year"></span> Netflix, Inc. All rights reserved.
     </div>
-    <a href="/Netflix-Clone/Terms of use/terms.html">Terms of Use</a> |
-      <a href="/Netflix-Clone/Privacy/privacy.html">Privacy Policy</a> |
-      <a href="/Netflix-Clone/Legal Notices/legal.html">Legal Notices</a>
+    <a href="/Terms of use/terms.html">Terms of Use</a> |
+      <a href="/Privacy/privacy.html">Privacy Policy</a> |
+      <a href="/Legal Notices/legal.html">Legal Notices</a>
   </footer>
   <script src="privacy.js"></script>
 </body>
