--- a/Terms of use/terms.html
+++ b/Terms of use/terms.html
@@ -13,9 +13,9 @@
   <header>
     <div class="logo">Netflix</div>
     <nav>
-      <a href="/Netflix-Clone/index.html">Home</a>
-      <a href="/Netflix-Clone/Privacy/privacy.html">Privacy</a>
-      <a href="/Netflix-Clone/Legal Notices/legal.html" class="active">Legal</a>
+      <a href="/index.html">Home</a>
+      <a href="/Privacy/privacy.html">Privacy</a>
+      <a href="/Legal Notices/legal.html" class="active">Legal</a>
       <button onclick="window.print()" class="print-btn">Print</button>
       <button class="toggle-dark"></button>
       <button class="btn" onclick="location.href='/Netflix-Clone/signin.html'">Sign In</button>
@@ -68,9 +68,9 @@
   <footer>
     <div>&copy; 2025 Netflix Clone. All rights reserved.</div>
     <div>
-      <a href="terms.html">Terms of Use</a> |
-      <a href="/Netflix-Clone/Privacy/privacy.html">Privacy Policy</a> |
-      <a href="/Netflix-Clone/Legal Notices/legal.html">Legal Notices</a>
+      <a href="/Terms of use/terms.html">Terms of Use</a> |
+      <a href="/Privacy/privacy.html">Privacy Policy</a> |
+      <a href="/Legal Notices/legal.html">Legal Notices</a>
     </div>
   </footer>
 
