--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
               <div class="footer-column" style="--i: 4">
                   <h4>Legal</h4>
                   <ul>
-                      <li><a href="/Netflix-Clone/Terms of use/terms.html">Terms of Use</a></li>
-                      <li><a href="/Netflix-Clone/Privacy/privacy.html">Privacy Policy</a></li>
-                      <li><a href="/Netflix-Clone/Legal Notices/legal.html">Legal Notices</a></li>
+                      <li><a href="/Terms of use/terms.html">Terms of Use</a></li>
+                      <li><a href="/Privacy/privacy.html">Privacy Policy</a></li>
+                      <li><a href="/Legal Notices/legal.html">Legal Notices</a></li>
                   </ul>
               </div>
           </div>
