added the link to index.html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                   <h4>Support</h4>
                   <ul>
                       <li><a href="#">Help Centre</a></li>
-                      <li><a href="#">Contact Us</a></li>
+                      <li><a href="contact-us.html">Contact Us</a></li>
                       <li><a href="#">Account</a></li>
                       <li><a href="#">Speed Test</a></li>
                   </ul>
