--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
 
   <style>
     @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
-    *{
+    * {
         box-sizing: border-box;
         margin: 0;
         padding: 0;
@@ -15,11 +15,10 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #fff;
-      color: #333;
+      background: #000; /* Black background */
+      color: #fff;      /* White text */
     }
     
-
     .navbar {
       display: flex;
       justify-content: space-between;
@@ -29,9 +28,7 @@
     }
  
     .navbar img {
-      color: rgb(243, 236, 236);
-      font-size: 24px;
-      margin: 0;
+      height: 50px;
     }
     .navbar .btns button {
       margin-left: 10px;
@@ -47,25 +44,27 @@
     }
     .join-btn:hover {
       background: #080808;
-      border:rgb(243, 236, 236) 1px solid;
+      border: rgb(243, 236, 236) 1px solid;
     }
     .signin-btn {
-      background: #f50410;
+      background: #e50914; /* Netflix red */
       color: #fff;
       border: none;
     }
     .signin-btn:hover {
       background: #C11119;
-        color: #fff;
+      color: #fff;
     }
-    a{
-        text-decoration: none; color:white;
+    a {
+        text-decoration: none; 
+        color: white;
     }
+
     .logo-section {
-  display: flex;
-  align-items: center;
-  gap: 10px; /* space between logo and text */
-}
+      display: flex;
+      align-items: center;
+      gap: 10px; /* space between logo and text */
+    }
     .help-center {
       color: white;
       font-size: 16px;
@@ -73,44 +72,44 @@
     }
 
     .notice {
-      background: #f5f5f2;
+      background: #141414; /* dark gray banner */
       padding: 12px 300px;
       font-size: 16px;
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #333;
       text-align: left;
       line-height: 1.5;
+      color: #e5e5e5;
     }
 
- 
     .container {
       max-width: 800px;
       margin: 30px auto;
       padding: 0 20px;
     }
+
     h1 {
       font-size: 32px;
       margin-bottom: 15px;
-      color: black;
+      color: #fff;
       line-height: 40px;
-      display: block;
-      margin-block-start: 0.67em;
-      margin-block-end: 0.67em;
-      margin-inline-start: 0px;
-      margin-inline-end: 0px;
       font-weight: bold;
-      unicode-bidi: isolate;
     }
+
     .description {
       font-size: 16px;
       margin-bottom: 15px;
+      color: #b3b3b3; /* Netflix uses muted gray for descriptions */
     }
+
     .input-box {
       width: 100%;
       padding: 12px;
       font-size: 16px;
-      border: 1px solid #ccc;
+      border: 1px solid #333;
       border-radius: 3px;
       margin-bottom: 25px;
+      background: #141414;
+      color: #fff;
     }
 
     /* Quick Links */
@@ -118,12 +117,7 @@
       font-size: 18px;
       margin-bottom: 10px;
       line-height: 27px;
-      margin-block-start: 1em;
-      margin-block-end: 1em;
-      margin-inline-start: 0px;
-      margin-inline-end: 0px;
-      display: block;
-    
+      color: #fff;
     }
     .quick-links {
       list-style: none;
@@ -132,23 +126,25 @@
     }
     .quick-links li {
       padding: 12px 0;
-      border-top: 1px solid #ddd;
+      border-top: 1px solid #333;
     }
     .quick-links li a {
       text-decoration: underline;
-      color: #000;
+      color: #fff;
       font-weight: bold;
     }
     .quick-links li a:hover {
-        color: #4c4948;
+        color: #b3b3b3;
     }
+
     .footer {
-    padding: 10px 0 48px;
-    background: #000;
-    background: linear-gradient(10deg, rgba(229, 9, 20, 0) 58%, rgb(229, 9, 20) 128%), #000; 
+      padding: 10px 0 48px;
+      background: linear-gradient(10deg, rgba(229, 9, 20, 0) 58%, rgb(229, 9, 20) 128%), #000; 
     }
-    .container li{
-        color: #AFAFA7; text-align: left;  list-style:none; 
+    .container li {
+        color: #AFAFA7; 
+        text-align: left;  
+        list-style:none; 
         padding: 10px 0;
         font-size: 15px;
     }
@@ -170,16 +166,19 @@
   <!-- Navbar -->
   <div class="navbar">
     <div class="logo-section">
-    <img src="assets/images/netflix-logo.png" alt="Netflix Logo" style="height: 50px; "> 
-    <p style="color: white; font-size: 16px; margin: 0;" class="help-center">| Help Center</p> </div>
+      <img src="assets/images/netflix-logo.png" alt="Netflix Logo"> 
+      <p class="help-center">| Help Center</p>
+    </div>
     <div class="btns">
       <button class="join-btn"><a href="register.html">Join Netflix</a></button>
       <button class="signin-btn"><a href="signin.html">Sign In</a></button>
     </div>
-    </div>
-    <!-- Notice -->
+  </div>
+
+  <!-- Notice -->
   <div class="notice">
-  <b>  <i class="fa-regular fa-bell"></i>   Wait times for chat support are longer than usual right now.</b> </br> Check back later, or search our Help Center for answers.
+    <b><i class="fa-regular fa-bell"></i> Wait times for chat support are longer than usual right now.</b><br>
+    Check back later, or search our Help Center for answers.
   </div>
 
   <!-- Main Container -->
@@ -190,8 +189,8 @@
 
     <h3>Quick Links</h3>
     <ul class="quick-links">
-      <li><a href="#"> Content Grievances in India</a></li>
-      <li><a href="#"> Reset password</a></li>
+      <li><a href="#">Content Grievances in India</a></li>
+      <li><a href="#">Reset password</a></li>
       <li><a href="#">Update email</a></li>
       <li><a href="#">Get help signing in</a></li>
       <li><a href="#">Update payment method</a></li>
@@ -199,6 +198,8 @@
     </ul>
   </div>
 </div>
+
+<!-- Footer -->
 <div class="footer">
   <div class="container">
     <select>
@@ -211,7 +212,7 @@
     <li>Privacy</li>
     <li>Cookie Preferences</li>
     <li>Corporate Information</li>
-    </div>
+  </div>
 </div>   
 </body>
 </html>
