create movies.html page and protect it using localStorage login check

--- a/dashboard.html
+++ b/dashboard.html
@@ -35,7 +35,7 @@
             </a></li>
             <li><a href="#" class="nav-item" data-category="movies" title="Movies">
                 <i class="fas fa-film nav-icon"></i>
-                <span class="nav-label">Movies</span>
+               <span class="nav-label"><a href="movies.html">Movies</a></span>
             </a></li>
             <li><a href="#" class="nav-item" data-category="mylist" title="My List">
                 <i class="fas fa-bookmark nav-icon"></i>
@@ -354,5 +354,8 @@
             <p>Add movies and TV shows to your list to watch them later.</p>
         </div>
     </div>
+
+    
+  
 </body>
 </html>
