Fix: Resolve Netflix intro audio autoplay

--- a/index.html
+++ b/index.html
@@ -17,21 +17,9 @@
   <body>
     <!-- Loading Screen -->
     <div id="loadingScreen" class="loading-screen">
-      <div class="loading-container">
-        <div class="netflix-loader">
-          <!-- <img src="assets/images/netflix-logo.png" alt="Netflix" class="loading-logo" /> -->
-          <div class="loading-text">NETFLIX</div>
-        </div>
-        <div class="loading-bar">
-          <div class="loading-progress"></div>
-        </div>
-        <div class="loading-dots">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </div>
+        <iframe id="netflixIframe" src="animations/netflix.html" frameborder="0"></iframe>
     </div>
+
 
     <div class="main">
       <!-- Navigation -->
