fix: correct typo in document title from "Netflix Clone" to "Netflix Clon"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <title>Netflix Clone</title>
+    <title>Netflix Clon</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
