feat: add a plus icon

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
       <div class="faqbox" style="--i: 1">
     <div class="faq-header">
       <div class="question" data-i18n="faq_q1">What is Netflix?</div>
+      <span class="faq-plus-icon ">+</span>
     </div>
     <div class="answer" data-i18n="faq_a1">
       Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more.
@@ -174,6 +175,7 @@
         <div class="faqbox" style="--i: 2">
     <div class="faq-header">
       <div class="question" data-i18n="faq_q2">How much does Netflix cost?</div>
+      <span class="faq-plus-icon ">+</span>
     </div>
     <div class="answer" data-i18n="faq_a2">
       Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans start from ₹149 to ₹649 a month.
@@ -183,6 +185,7 @@
         <div class="faqbox" style="--i: 3">
     <div class="faq-header">
       <div class="question" data-i18n="faq_q3">What can I watch on Netflix?</div>
+      <span class="faq-plus-icon ">+</span>
     </div>
     <div class="answer" data-i18n="faq_a3">
       Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more.
@@ -192,6 +195,7 @@
   <div class="faqbox" style="--i: 4">
     <div class="faq-header">
       <div class="question" data-i18n="faq_q4">Where can I watch?</div>
+      <span class="faq-plus-icon ">+</span>
     </div>
     <div class="answer" data-i18n="faq_a4">
       Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device.
@@ -201,6 +205,7 @@
   <div class="faqbox" style="--i: 5">
     <div class="faq-header">
       <div class="question" data-i18n="faq_q5">Is Netflix good for kids?</div>
+      <span class="faq-plus-icon ">+</span>
     </div>
     <div class="answer" data-i18n="faq_a5">
       The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies.
