--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </button>
     
     <!-- Desktop nav buttons -->
-    <div class="desktop-nav-buttons">
+    <div class="desktop-nav-buttons" style="display: flex; align-items: center; justify-content: center; gap: 5px;">
       <!-- Direct icon placement -->
       <img id="theme-toggle" src="darkmode.jpg" alt="Theme" style="width: 24px; height: 24px; cursor: pointer; margin-right: 15px;">
       
